# PSC-Serie1

./: .gitignore  CMakeLists.txt  exercicio1.c  exercicio4.c  exercise1.c  exercise2.c  exercise3.c  exercise4.c  exercise5.c  exercise6.c  stock.csv
