cmake_minimum_required(VERSION 3.10)
project(trabalho1 C)

set(CMAKE_C_STANDARD 11)

add_executable(exercise1
        exercise1.c)
add_executable(exercise2
        exercise2.c)
add_executable(exercise3
        exercise3.c)
add_executable(exercise4
        exercise4.c)
add_executable(exercise5
        exercise5.c)
add_executable(exercise6
        exercise6.c)